# planning-orogen-corridor_planner

./: CMakeLists.txt  FilterConfigTypes.hpp  TerrainInfo.hpp  corridorWrappers.hpp  corridor_planner.orogen  manifest.xml
scripts/: .gitignore  corridor_plan_controls.rb  corridor_plan_display_ui.rb  corridor_planner.ui  display  display_log  display_paths  from_log  raster_map_view.rb  run  run.sh  test.sh  tools.rb  typelib.rb
tasks/: CMakeLists.txt  Task.cpp  Task.hpp  Traversability.cpp  Traversability.hpp
