include(corridor_plannerTaskLib)
ADD_LIBRARY(${CORRIDOR_PLANNER_TASKLIB_NAME} SHARED 
    ${CORRIDOR_PLANNER_TASKLIB_SOURCES})

add_dependencies(${CORRIDOR_PLANNER_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${CORRIDOR_PLANNER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CORRIDOR_PLANNER_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${CORRIDOR_PLANNER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CORRIDOR_PLANNER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CORRIDOR_PLANNER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CORRIDOR_PLANNER_TASKLIB_HEADERS}
    DESTINATION include/orocos/corridor_planner)

